hw3/grade.txt
I finished judging your code on 22-04-2023 at 11:05:06.

Compile error...

----------<BEGIN AUTO GENERATED OUTPUT>-----------

mm_alloc.c: In function ‘mm_realloc’:
mm_alloc.c:156:5: error: ‘current_block’ undeclared (first use in this function); did you mean ‘get_block’?
  156 |     current_block = get_block(ptr);
      |     ^~~~~~~~~~~~~
      |     get_block
mm_alloc.c:156:5: note: each undeclared identifier is reported only once for each function it appears in
make[1]: *** [Makefile:26: mm_alloc.o] Error 1
make: *** [Makefile:20: hard] Error 2

-----------<END AUTO GENERATED OUTPUT>------------
Your final grade is: 0/100.0epoch: 1682161507
